--- a/index.html
+++ b/index.html
@@ -575,6 +575,19 @@
           </div>
         </div>
       </div>
+      <section class="my-12">
+   
+        <div class="flex flex-col lg:flex-row justify-center lg:text-left gap-10 mb-10">
+          <div class="space-y-4">
+            <h1 class="text-color-dark text-4xl lg:text-5xl font-extrabold text-center">
+              Why Choose Us
+            </h1>
+            <p class="text-color-gray text-base font-medium max-w-[615px] text-center">
+              Experience Superior Quality and Unmatched Service at Fruit Burst! Our Rigorous Selection Process Ensures Only the Freshest, Handpicked Fruits Reach Your Plate. Join Us Today for an Unrivaled Burst of Flavors and Nourishment!
+            </p>
+          </div>
+        </div>
+        </section>
 
   </main>
 
